<resources>
    <string name="app_name">Pledge For Change</string>

    <!-- Strings related to login -->
    <string name="prompt_school">School Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_invalid_school">Invalid school</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string-array name="volunteer_array">
        <item>VOLUNTEER</item>
        <item>DIRECTOR</item>
    </string-array>
    <string-array name="director_array">
        <item>DIRECTOR</item>
        <item>VOLUNTEER</item>
    </string-array>
</resources>
